# Sway-Sweetness

./: .gitignore  .gitmodules  README.md  install.sh  sway_setup.md
bg/: CMakeLists.txt
bg/src/: egl_ctx.c  egl_ctx.h  main.c  scene.c  scene.h  wayland_ctx.c  wayland_ctx.h
config/environment.d/: 10-shell.conf
config/foot/: foot.ini
config/sway/: config  screenshot.sh  statusbar.sh
config/wofi/: config  style.css
system/greetd/: config.toml
